--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,69 @@
-amqp==5.1.1
+amqp==5.2.0
 aniso8601==9.0.1
-attrs==22.2.0
-billiard==3.6.4.0
-CacheControl==0.12.11
-cachetools==5.3.0
-celery==5.2.7
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.3
+annotated-types==0.6.0
+attrs==23.1.0
+billiard==4.2.0
+blinker==1.7.0
+CacheControl==0.13.1
+cachetools==5.3.2
+celery==5.3.6
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
-click-repl==0.2.0
-cryptography==40.0.1
-firebase-admin==6.1.0
-Flask==2.2.3
-flask-restx==1.1.0
-google-api-core==2.11.0
-google-api-python-client==2.83.0
-google-auth==2.17.1
-google-auth-httplib2==0.1.0
-google-cloud-core==2.3.2
-google-cloud-firestore==2.10.1
-google-cloud-storage==2.8.0
+click-repl==0.3.0
+cryptography==41.0.7
+firebase-admin==6.2.0
+Flask==2.3.3
+flask-restx==1.2.0
+google-api-core==2.14.0
+google-api-python-client==2.109.0
+google-auth==2.24.0
+google-auth-httplib2==0.1.1
+google-cloud-core==2.3.3
+google-cloud-firestore==2.13.1
+google-cloud-storage==2.13.0
 google-crc32c==1.5.0
-google-resumable-media==2.4.1
-googleapis-common-protos==1.59.0
-grpcio==1.53.0
-grpcio-status==1.53.0
+google-resumable-media==2.6.0
+googleapis-common-protos==1.61.0
+grpcio==1.59.3
+grpcio-status==1.59.3
+gunicorn==21.2.0
 httplib2==0.22.0
-idna==3.4
+idna==3.6
+importlib-resources==6.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonschema==4.17.3
-kombu==5.2.4
-MarkupSafe==2.1.2
-msgpack==1.0.5
-neo4j==5.7.0
-prompt-toolkit==3.0.38
-proto-plus==1.22.2
-protobuf==4.22.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+jwt==1.3.1
+kombu==5.3.4
+MarkupSafe==2.1.3
+msgpack==1.0.7
+neo4j==5.15.0
+packaging==23.2
+peewee==3.17.0
+prompt-toolkit==3.0.41
+proto-plus==1.22.3
+protobuf==4.25.1
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
 pycparser==2.21
-PyJWT==2.6.0
-pyparsing==3.0.9
-pyrsistent==0.19.3
-pytz==2023.3
-requests==2.28.2
+pydantic==2.5.2
+pydantic_core==2.14.5
+PyJWT==2.8.0
+pyparsing==3.1.1
+pyrsistent==0.20.0
+python-dateutil==2.8.2
+pytz==2023.3.post1
+requests==2.31.0
 rsa==4.9
 six==1.16.0
+typing_extensions==4.8.0
+tzdata==2023.3
 uritemplate==4.1.1
-urllib3==1.26.15
-vine==5.0.0
-wcwidth==0.2.6
-Werkzeug==2.2.3
+urllib3==2.1.0
+vine==5.1.0
+wcwidth==0.2.12
+Werkzeug==2.3.8
